# Q-Manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MainPlan.md  README.md  TODO.md  build-linux-wsl.sh  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
docs/: DEPLOYMENT.md  RELEASE_TEMPLATE.md  TESTING_LINUX_PACKAGES.md
scripts/: build-release.ps1  build-release.sh  check-coverage.cjs  generate-icons.md  sync-version.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  stderr.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  errors.rs  events.rs  import_utils.rs  ipc.rs  lib.rs  logging.rs  main.rs  server.rs  startup_checks.rs  tray.rs  validation.rs  validation_tests.rs
src-tauri/src/commands/: accounts.rs  actions.rs  group_slots.rs  import_export.rs  login.rs  mod.rs  phases.rs  settings.rs  startup_checks.rs  targets.rs
src-tauri/src/db/: mod.rs  operations.rs  operations_tests.rs  schema.rs
src-tauri/src/telethon/: login_session.rs  mod.rs
src-tauri/src/utils/: debounce.rs  debounce_tests.rs  fs.rs  mod.rs
src-tauri/src/workers/: account_worker.rs  account_worker_tests.rs  cache.rs  detection.rs  manager.rs  mod.rs
src-tauri/tests/: integration_tests.rs
src/components/: ActivityFeed.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  FormField.tsx  HelpTooltip.tsx  LoadingSkeleton.tsx  PageLoader.tsx  ProgressIndicator.tsx  RegexHelpDialog.tsx  RegexTestDialog.tsx  TelethonLoader.tsx  WolfLogo.tsx  login-wizard.tsx  page-header.tsx  theme-provider.tsx
src/components/accounts/: AccountsTable.tsx  AccountsToolbar.tsx  index.ts
src/components/actions/: ActionDefaultsDialog.tsx  ActionDialogs.tsx  ActionPatternTable.tsx
src/components/motion/: AnimatedBadge.tsx  AnimatedButton.tsx  AnimatedCard.tsx  AnimatedList.tsx  PageTransition.tsx  index.ts
src/components/phases/: PhasePatternDialogs.tsx
src/components/targets/: TargetConfigDialog.tsx  TargetsAccountView.tsx  TargetsActionView.tsx  TargetsCopyDialogs.tsx  TargetsView.test.tsx  TargetsView.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  input.tsx  progress.tsx  skeleton.tsx  skeletons.tsx  sonner.tsx  spinner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx  visually-hidden.tsx
src/hooks/: useAccountEvents.ts  useAccountsData.ts  useActionPatterns.ts  useActionsData.ts  useDebounce.test.ts  useDebounce.ts  useEventDebounce.ts  useKeyboardShortcut.ts  useSettingsData.ts  useTargetsData.ts
src/lib/: accessibility.ts  api.ts  error-utils.test.ts  error-utils.ts  ipc.test.ts  ipc.ts  logger.ts  login-api.ts  query-keys.ts  retry.test.ts  retry.ts  sanitize.test.ts  sanitize.ts  toast-utils.ts  transport.ts  types.ts  utils.ts  validation.test.ts  validation.ts
src/pages/: AccountEditPage.tsx  AccountsPage.tsx  ActionsPage.tsx  HomePage.tsx  PhaseDetectionPage.tsx  SettingsPage.tsx  TargetsPage.tsx
src/test/: query-test-utils.tsx  setup.ts
telethon-worker/: build-telethon.ps1  build-telethon.sh  telethon-worker.spec  telethon_worker.py
