[package]
name = "q-manager"
version = "1.0.0"
description = "Q Manager - Werewolf Game Automation"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "q_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# Tests on Windows hit system DLL entrypoint issues; run tests on non-Windows only
# (cargo test still works on Linux/macOS)
test = false

[[bin]]
name = "q-manager"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database with connection pooling
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for pattern matching
regex = "1"
once_cell = "1"
lru = "0.12"
parking_lot = "0.12"

# Random number generation
rand = "0.8"

# Filesystem utilities
walkdir = "2"
zip = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# URL parsing
url = "2"

# Base64 encoding
base64 = "0.22"

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Image processing
image = "0.25"

