[package]
name = "q-manager"
version = "2.0.0"
description = "Q Manager - Telegram Werewolf automation (desktop + headless browser server)"
authors = ["Mahyar"]
license = "MIT"
repository = "https://github.com/QMahyar/Q-Manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "q_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# Tests on Windows hit system DLL entrypoint issues; run tests on non-Windows only
# (cargo test still works on Linux/macOS)
test = true

[[bin]]
name = "q-manager"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri (desktop only — optional so headless/Termux builds drop the webview)
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database with connection pooling
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for pattern matching
regex = "1"
once_cell = "1"
lru = "0.12"
parking_lot = "0.12"

# Random number generation
rand = "0.8"

# Filesystem utilities
walkdir = "2"
zip = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# URL parsing
url = "2"

# Base64 encoding
base64 = "0.22"

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Image processing
image = "0.25"

# --- Headless web-server mode (browser app; enables Termux/ARM/server builds) ---
# Optional so the desktop build doesn't pull them in, and so a future
# `--no-default-features` build can drop the webview entirely.
axum = { version = "0.7", features = ["ws"], optional = true }
rust-embed = { version = "8", features = ["interpolate-folder-path"], optional = true }
mime_guess = { version = "2", optional = true }
local-ip-address = { version = "0.6", optional = true }

[features]
default = ["desktop"]
# Native desktop app (Tauri webview, system tray, native dialogs).
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-single-instance",
]
# Headless HTTP+WebSocket server that serves the built UI to a browser.
# Build a webview-free binary (Termux/ARM/headless) with:
#   cargo build --release --no-default-features --features server
server = ["dep:axum", "dep:rust-embed", "dep:mime_guess", "dep:local-ip-address"]

